--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Karim Elmougi</title>
   <meta name="description" content="Karim Elmougi">
   <meta name="author" content="Karim Elmougi">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans">
 </head>
 
 <body>
